Increased top padding on page. Fixed Grade Items spacing and alignment problems.

--- a/app/assets/stylesheets/tablednd.css
+++ b/app/assets/stylesheets/tablednd.css
@@ -28,7 +28,7 @@ pre, code {
 
 div#page {
     background-color: white;
-    padding: 1em;
+    padding: 2em 1em 1em 1em;
 }
 
 .tableDemo {
